examples/test/testpolicy11838.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11838
  namespace: namespace231
spec:
  podSelector:
    matchLabels:
      key5: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value20
          key16: value23
          key5: value48
      podSelector:
        matchLabels:
          key48: value11
          key16: value2
          key7: value27
